--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Learn & Practice - Your ideal learning platform">
   <title>Home &dash; Learn & Practice</title>
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
   <header>
