--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <li><a href="#">Products</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
+        <li><input type="text" placeholder="Search in Learn & Practice"></li>
+        <li><button type="button" value="login">Log in</button></li>
+        <li><button type="button" value="signup">Sign up</button></li>
       </ul>
     </nav>
   </header>
