Feat: add logo to header nav
Create assets folder with logo image and adjust header nav

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <header>
     <nav>
       <ul>
+        <li><a href="#"><img width="100px" height="100px" src="assets/images/logo-example-1.png" alt="Learn and Practice. Your ideal learning platform"></a></li>
         <li><a href="#">Home</a></li>
         <li><a href="#">Products</a></li>
         <li><a href="#">About</a></li>
