--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Learn & Practice - Your ideal learning platform">
   <title>Home &dash; Learn & Practice</title>
   <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <link rel="icon" type="image/png" href="assets/images/favicon.png">
 </head>
 <body>
   <header>
