Feat: create and style footer
Structure the footer of the page and add css style

--- a/index.html
+++ b/index.html
@@ -32,7 +32,38 @@
   </main>
 
   <footer>
-    <p>&copy; Learn & Practice</p>
+    <section>
+      <div>
+        <h3>Company</h3>
+        <p><a href="#">About us</a></p>
+        <p><a href="#">Contact</a></p>
+        <p><a href="#">Carrers</a></p>
+        <p><a href="#">Partners</a></p>
+      </div>
+
+      <div>
+        <h3>Products</h3>
+        <p><a href="#">For students</a></p>
+        <p><a href="#">For teachers</a></p>
+      </div>
+
+      <div>
+        <h3>Comunity</h3>
+        <p><a href="#">Learn & Practice blog</a></p>
+        <p><a href="#">Webinars</a></p>
+      </div>
+
+      <div>
+        <h3>Follow us</h3>
+        <p><a href="#">Linkedin</a></p>
+        <p><a href="#">Facebook</a></p>
+        <p><a href="#">Instagram</a></p>
+      </div>
+    </section>
+
+    <section>
+      <p>&copy; 2024 Learn & Practice. All rights reserved.</p>
+    </section>
   </footer>
 </body>
 </html>
