Feat: structure and style the main content
Add images, text and buttons to the main content of the page

--- a/index.html
+++ b/index.html
@@ -30,9 +30,55 @@
       <img src="assets/images/landing-page-image-example.png" alt="A person is studying using a laptop while smiling and writing in a notebook">
       <h1><span>Learn</span> & <span>Practice</span></h1>
       <h2>Your ideal learning platform!</h2>
-      <p>Here you can learn anything and practice with our many subject exams. Start a subject, practice what you've learned, ask questions, get answers and join our great and colaborative comunity.</p>
+      <p>Here you can learn anything and practice with our many subject exams. Start a subject, practice what you've learned, ask questions, get answers and join our great and colaborative community.</p>
       <button type="button">Let's start!</button>
     </article>
+
+    <section>
+      <article>
+        <figure>
+          <img src="assets/images/image-example-2.png">
+          <figcaption>
+            <h2>Extensive collection</h2>
+            <p>Search a subject that you like or learn something new in our platform full of different subjects.</p>
+            <button type="button">Find a topic</button>
+          </figcaption>
+        </figure>
+      </article>
+
+      <article>
+        <figure>
+          <img src="assets/images/image-example-3.png">
+          <figcaption>
+            <h2>Practice, practice, practice</h2>
+            <p>Learn & Practice takes its name very seriously. For every subject, we provide practice tests so you can elevate your studies.</p>
+            <button type="button">Start practicing</button>
+          </figcaption>
+        </figure>
+      </article>
+
+      <article>
+        <figure>
+          <img src="assets/images/image-example-4.png">
+          <figcaption>
+            <h2>Be part of something great</h2>
+            <p>Our community increases day by day with hundreds of people. All of them with the same reason. Passionate about studying.</p>
+            <button type="button">Join our community</button>
+          </figcaption>
+        </figure>
+      </article>
+
+      <article>
+        <figure>
+          <img src="assets/images/image-example-5.png">
+          <figcaption>
+            <h2>Learners and teachers together</h2>
+            <p>If you are a teacher, we have an invite for you. We would like you to contribute helping learners who ask questions about a subject or topic.</p>
+            <button type="button">Help learners</button>
+          </figcaption>
+        </figure>
+      </article>
+    </section>
   </main>
 
   <footer>
@@ -52,7 +98,7 @@
       </div>
 
       <div>
-        <h3>Comunity</h3>
+        <h3>Community</h3>
         <p><a href="#">Learn & Practice blog</a></p>
         <p><a href="#">Webinars</a></p>
       </div>
