Feat: add alternative texts to images

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section>
       <article>
         <figure>
-          <img src="assets/images/image-example-2.png">
+          <img src="assets/images/image-example-2.png" alt="A student takes notes while reading a textbook">
           <figcaption>
             <h2>Extensive collection</h2>
             <p>Search a subject that you like or learn something new in our platform full of different subjects.</p>
@@ -48,7 +48,7 @@
 
       <article>
         <figure>
-          <img src="assets/images/image-example-3.png">
+          <img src="assets/images/image-example-3.png" alt="A person is solving exercices using a textbook and a laptop">
           <figcaption>
             <h2>Practice, practice, practice</h2>
             <p>Learn & Practice takes its name very seriously. For every subject, we provide practice tests so you can elevate your studies.</p>
@@ -59,7 +59,7 @@
 
       <article>
         <figure>
-          <img src="assets/images/image-example-4.png">
+          <img src="assets/images/image-example-4.png" alt="Three people are together, all focused on solving a problem from a textbook">
           <figcaption>
             <h2>Be part of something great</h2>
             <p>Our community increases day by day with hundreds of people. All of them with the same reason. Passionate about studying.</p>
@@ -70,7 +70,7 @@
 
       <article>
         <figure>
-          <img src="assets/images/image-example-5.png">
+          <img src="assets/images/image-example-5.png" alt="A teacher/professor uses a whiteboard, explaining a math exercise in front of a laptop and a cell phone">
           <figcaption>
             <h2>Learners and teachers together</h2>
             <p>If you are a teacher, we have an invite for you. We would like you to contribute helping learners who ask questions about a subject or topic.</p>
