Feat: display menu in nav when on small screen
Use CSS to display hamburger menu on small screen

--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
         <li><input type="text" placeholder="Search in Learn & Practice"></li>
+
+        <!-- Hamburger menu -->
+        <li>
+          <button type="button" value="menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+        </li>
+
         <li><button type="button" value="login">Log in</button></li>
         <li><button type="button" value="signup">Sign up</button></li>
       </ul>
