Feat: adjust first main content display
Structure first main content elements and adjust display with CSS

--- a/index.html
+++ b/index.html
@@ -37,11 +37,15 @@
 
   <main>
     <article>
-      <img src="assets/images/landing-page-image-example.png" alt="A person is studying using a laptop while smiling and writing in a notebook">
-      <h1><span>Learn</span> & <span>Practice</span></h1>
-      <h2>Your ideal learning platform!</h2>
-      <p>Here you can learn anything and practice with our many subject exams. Start a subject, practice what you've learned, ask questions, get answers and join our great and colaborative community.</p>
-      <button type="button">Let's start!</button>
+      <figure>
+        <img src="assets/images/landing-page-image-example.png" alt="A person is studying using a laptop while smiling and writing in a notebook">
+        <figcaption>
+          <h1><span>Learn</span> & <span>Practice</span></h1>
+          <h2>Your ideal learning platform!</h2>
+          <p>Here you can learn anything and practice with our many subject exams. Start a subject, practice what you've learned, ask questions, get answers and join our great and colaborative community.</p>
+          <button type="button">Let's start!</button>
+        </figcaption>
+      </figure>
     </article>
 
     <section>
