--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <figure>
         <img src="assets/images/landing-page-image-example.png" alt="A person is studying using a laptop while smiling and writing in a notebook">
         <figcaption>
-          <h1><span>Learn</span> & <span>Practice</span></h1>
-          <h2>Your ideal learning platform!</h2>
+          <h1><strong>Learn</strong> & <strong>Practice</strong></h1>
+          <h2>Your <em>ideal</em> learning platform!</h2>
           <p>Here you can learn anything and practice with our many subject exams. Start a subject, practice what you've learned, ask questions, get answers and join our great and colaborative community.</p>
           <button type="button">Let's start!</button>
         </figcaption>
