--- a/index.html
+++ b/index.html
@@ -93,6 +93,29 @@
         </figure>
       </article>
     </section>
+
+    <article>
+      <h2>See what learners and teachers say!</h2>
+      <section>
+        <article>
+          <img src="assets/images/profile-picture-example-1.png" alt="">
+          <h3>Liam Daniel</h3>
+          <p>Me and my friends quickly leaned how to navigate the platform. It makes searching for new subjects simple and enjoyable!</p>
+        </article>
+
+        <article>
+          <img src="assets/images/profile-picture-example-2.png" alt="">
+          <h3>Amy Olivia</h3>
+          <p>I've never found such a collaborative and large community of learners. There's always someone willing to help and nicely clarify any questions you have.</p>
+        </article>
+
+        <article>
+          <img src="assets/images/profile-picture-example-3.png" alt="">
+          <h3>Bob Richard</h3>
+          <p>I already have notifications ready when a question comes up about one of my favorite subjects.</p>
+        </article>
+      </section>
+    </article>
   </main>
 
   <footer>
