Feat: adjust display of images on main content
Change flex direction of certain elements and update a user card text

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <article>
           <img src="assets/images/profile-picture-example-1.png" alt="">
           <h3>Liam Daniel</h3>
-          <p>Me and my friends quickly leaned how to navigate the platform. It makes searching for new subjects simple and enjoyable!</p>
+          <p>My friends and I quickly leaned how to navigate the platform. It makes searching for new subjects simple and enjoyable!</p>
         </article>
 
         <article>
